package com.hvpaiva.factorymethod;

/**
 * Interface de Pizza.
 */
public interface Pizza {

	/**
	 * @return O tipo daquela pizza.
	 */
	String tipoPizza();
}
