package com.hvpaiva.factorymethod;

/**
 * Interface de pizzaiolo.
 */
public interface Pizzaiolo {

	/**
	 * @return cria uma pizza.
	 */
	Pizza criarPizza();
}
